--- a/.github/workflows/create-deployment.yml
+++ b/.github/workflows/create-deployment.yml
@@ -6,10 +6,16 @@ on:
       endpoint_file:
         required: true
         type: string
-      resource_group:
+      model_resource_group:
         required: true
         type: string
-      workspace_name:
+      model_workspace_name:
+        required: true
+        type: string
+      deployment_resource_group:
+        required: true
+        type: string
+      deployment_workspace_name:
         required: true
         type: string
       endpoint_name:
@@ -19,6 +25,9 @@ on:
         required: true
         type: string
       deployment_name:
+        required: true
+        type: string
+      model_name:
         required: true
         type: string
     secrets:
@@ -39,8 +48,17 @@ jobs:
         run: az extension add -n ml -y
       - name: update-extension
         run: az extension update -n ml
+      - name: get-model-version
+        run: |
+          model_version=$(az ml model list --name ${{ inputs.model_name }} --resource-group ${{ inputs.model_resource_group }} --workspace-name ${{ inputs.model_workspace_name }} --query "[0].{Version:version}" --output tsv)
+          if [[ -z "$model_version" ]]
+          then
+            echo "Model version extraction failed"
+            exit 1
+          fi
+          echo "MODEL_VERSION=$model_version" >> $GITHUB_ENV
       - name: create-batch-deployment
         run: |
           az ml ${{ inputs.endpoint_type }}-deployment create --name ${{ inputs.deployment_name }} --endpoint ${{ inputs.endpoint_name }} \
-          -f ${{ github.workspace }}/${{ inputs.endpoint_file }} --resource-group ${{ inputs.resource_group }} \
-          --workspace-name ${{ inputs.workspace_name }}
+          -f ${{ github.workspace }}/${{ inputs.endpoint_file }} --resource-group ${{ inputs.deployment_resource_group }} \
+          --workspace-name ${{ inputs.deployment_workspace_name }}
