--- a/.github/workflows/share-model.yml
+++ b/.github/workflows/share-model.yml
@@ -39,7 +39,6 @@ jobs:
         run: az extension update -n ml
       
       - name: get-model-version
-        id: get_model_version
         run: |
           model_version=$(az ml model list --name ${{ inputs.model_name }} --resource-group ${{ inputs.resource_group }} --workspace-name ${{ inputs.workspace_name }} --query "[0].{Version:version}" --output tsv)
           if [[ -z "$model_version" ]]
@@ -47,8 +46,8 @@ jobs:
             echo "Model version extraction failed"
             exit 1
           fi
-          echo "model_version=$model_version" >> $GITHUB_ENV
+          echo "MODEL_VERSION=$model_version" >> $GITHUB_ENV
 
       - name: share-model-to-registry
         run: |
-          az ml model share --name ${{ inputs.model_name }} --version ${{ env.model_version }} --resource-group ${{ inputs.resource_group}} --workspace-name ${{ inputs.workspace_name }} --registry-name ${{ inputs.registry_name}} --share-with-name ${{ inputs.model_name }} --share-with-version ${{ env.model_version }}
+          az ml model share --name ${{ inputs.model_name }} --version ${{ env.MODEL_VERSION }} --resource-group ${{ inputs.resource_group}} --workspace-name ${{ inputs.workspace_name }} --registry-name ${{ inputs.registry_name}} --share-with-name ${{ inputs.model_name }} --share-with-version ${{ env.model_version }}
